# cellnoor

./: .env.compose.sample  .env.sample  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  compose.dev.yaml  compose.prod.yaml  compose.yaml  initial_data.sample.json  package.json
cellnoor-api/: Cargo.toml  Dockerfile
cellnoor-api/src/: api.rs  config.rs  initial_data.rs  lib.rs  main.rs  state.rs  test_state.rs  test_util.rs  validate.rs
cellnoor-api/src/api/: error.rs  extract.rs  routes.rs
cellnoor-api/src/api/extract/: query.rs  valid_json.rs
cellnoor-api/src/api/extract/auth/: error.rs  user.rs
cellnoor-api/src/api/routes/: cdna.rs  chromium_datasets.rs  chromium_runs.rs  gem_pools.rs  institutions.rs  labs.rs  libraries.rs  multiplexing_tags.rs  people.rs  sequencing_runs.rs  specimens.rs  suspension_pools.rs  suspensions.rs  tenx_assays.rs
cellnoor-api/src/api/routes/cdna/: create.rs  fetch.rs  list.rs
cellnoor-api/src/api/routes/cdna/measurements/: create.rs  list.rs
cellnoor-api/src/api/routes/chromium_datasets/: create.rs  fetch.rs  files.rs  list.rs
cellnoor-api/src/api/routes/chromium_datasets/files/: common.rs
cellnoor-api/src/api/routes/chromium_datasets/libraries/: list.rs
cellnoor-api/src/api/routes/chromium_datasets/specimens/: list.rs
cellnoor-api/src/api/routes/chromium_runs/: create.rs  fetch.rs  list.rs
cellnoor-api/src/api/routes/gem_pools/: fetch.rs  list.rs
cellnoor-api/src/api/routes/institutions/: create.rs  fetch.rs  list.rs
cellnoor-api/src/api/routes/institutions/members/: list.rs
cellnoor-api/src/api/routes/labs/: create.rs  list.rs
cellnoor-api/src/api/routes/libraries/: create.rs  fetch.rs  list.rs
cellnoor-api/src/api/routes/libraries/measurements/: create.rs  list.rs
cellnoor-api/src/api/routes/multiplexing_tags/: list.rs
cellnoor-api/src/api/routes/people/: create.rs  fetch.rs  list.rs  update.rs
cellnoor-api/src/api/routes/sequencing_runs/: create.rs  libraries.rs
cellnoor-api/src/api/routes/sequencing_runs/libraries/: add_to_sequencing_run.rs
cellnoor-api/src/api/routes/specimens/: create.rs  fetch.rs  list.rs  measurements.rs
cellnoor-api/src/api/routes/specimens/chromium_datasets/: list.rs
cellnoor-api/src/api/routes/specimens/measurements/: create.rs  list.rs
cellnoor-api/src/api/routes/suspension_pools/: cells.rs  create.rs  fetch.rs  list.rs  nuclei.rs
cellnoor-api/src/api/routes/suspension_pools/cells/: measurements.rs
cellnoor-api/src/api/routes/suspension_pools/measurements/: list.rs
cellnoor-api/src/api/routes/suspension_pools/suspensions/: list.rs
cellnoor-api/src/api/routes/suspensions/: cells.rs  create.rs  fetch.rs  list.rs  nuclei.rs
cellnoor-api/src/api/routes/tenx_assays/: list.rs
cellnoor-api/src/db/: boxed_filter.rs  error.rs  utils.rs
cellnoor-api/src/initial_data/: app_admin.rs  index_sets.rs  institution.rs  multiplexing_tags.rs  tenx_assays.rs
cellnoor-api/src/initial_data/index_sets/: common.rs  dual.rs  single.rs
cellnoor-api/src/validate/: cdna.rs  chromium_dataset.rs  chromium_run.rs  common.rs  initial_data.rs  institution.rs  lab.rs  library.rs  nucleic_acid_measurement.rs  person.rs  sequencing_run.rs  specimen.rs  suspension.rs  suspension_pool.rs  tenx_assay.rs
cellnoor-api/src/validate/cdna/: measurement.rs
cellnoor-api/src/validate/sequencing_run/: libraries.rs
cellnoor-api/src/validate/specimen/: measurement.rs
cellnoor-api/src/validate/suspension/: measurement.rs
cellnoor-api/src/validate/suspension_pool/: measurement.rs
crates/cellnoor-models/: Cargo.toml
crates/cellnoor-models/macro-attributes/src/: lib.rs
crates/cellnoor-models/macros/: Cargo.toml
crates/cellnoor-models/macros/src/: lib.rs
crates/cellnoor-models/src/: chromium_dataset.rs  chromium_run.rs  generic_query.rs  institution.rs  lab.rs  lib.rs  links.rs  multiplexing_tag.rs  nucleic_acid.rs  person.rs  sequencing_run.rs  specimen.rs  suspension.rs  suspension_pool.rs  tenx_assay.rs  units.rs
crates/cellnoor-models/src/chromium_dataset/: common.rs  creation.rs  query.rs  read.rs
crates/cellnoor-models/src/chromium_dataset/creation/: metrics.rs
crates/cellnoor-models/src/chromium_run/: common.rs  creation.rs  query.rs  read.rs
crates/cellnoor-models/src/chromium_run/creation/: ocm.rs  pool_multiplex.rs  singleplex.rs
crates/cellnoor-models/src/institution/: common.rs  creation.rs  query.rs  read.rs
crates/cellnoor-models/src/lab/: common.rs  creation.rs  query.rs  read.rs
crates/cellnoor-models/src/multiplexing_tag/: common.rs  creation.rs  read.rs
crates/cellnoor-models/src/nucleic_acid/: cdna.rs  library.rs  measurement.rs
crates/cellnoor-models/src/nucleic_acid/cdna/: common.rs  creation.rs  measurement.rs  query.rs  read.rs
crates/cellnoor-models/src/person/: common.rs  creation.rs  query.rs  read.rs  update.rs
crates/cellnoor-models/src/sequencing_run/: common.rs  creation.rs  libraries.rs  query.rs  read.rs
crates/cellnoor-models/src/sequencing_run/libraries/: creation.rs  read.rs
crates/cellnoor-models/src/specimen/: common.rs  creation.rs  measurement.rs  query.rs  read.rs
crates/cellnoor-models/src/specimen/creation/: block.rs  suspension.rs  tissue.rs
crates/cellnoor-models/src/specimen/measurement/: common.rs  creation.rs  read.rs
crates/cellnoor-models/src/suspension/: common.rs  creation.rs  measurement.rs  query.rs  read.rs
crates/cellnoor-models/src/suspension/measurement/: common.rs  creation.rs  read.rs
crates/cellnoor-models/src/suspension_pool/: common.rs  creation.rs  measurement.rs  query.rs  read.rs
crates/cellnoor-models/src/suspension_pool/measurement/: common.rs  creation.rs  read.rs
crates/cellnoor-models/src/tenx_assay/: common.rs  creation.rs  query.rs  read.rs
crates/cellnoor-models/src/tenx_assay/creation/: chromium.rs
crates/cellnoor-typescript/: Cargo.toml
crates/cellnoor-typescript/src/: main.rs
crates/non-empty/: Cargo.toml
crates/non-empty/src/: lib.rs  string.rs  vec.rs
crates/ranged/: Cargo.toml
crates/ranged/src/: lib.rs  ranged_f32.rs  ranged_u16.rs  ranged_u32.rs
(+186 files in other folders)
