[workspace]
members = [
  "cellnoor-api",
  "crates/cellnoor-models",
  "crates/cellnoor-models/macros",
  "crates/cellnoor-models/macro-attributes",
  "crates/cellnoor-schema",
  "crates/cellnoor-typescript",
  "crates/default-vec",
  "crates/non-empty",
  "crates/ranged",
]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
axum = { version = "0.8.8", default-features = false, features = [
  "http2",
  "json",
  "macros",
  "multipart",
  "tokio",
] }
axum-extra = { version = "0.12.5", features = [
  "typed-header",
  "typed-routing",
] }
base16ct = { version = "0.3.0" }
bon = { version = "3.8.1" }
camino = { version = "1.2.2", features = ["serde1"] }
clap = { version = "4.5.53", features = ["derive", "env"] }
csv = { version = "1.4.0" }
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
deranged = { version = "0.5.5" }
diesel = { version = "2.3.5", default-features = false }
diesel_migrations = { version = "2.3.1", features = ["postgres"] }
dotenvy = { version = "0.15.7" }
headers = { version = "0.4.1" }
heck = { version = "0.5.0" }
jiff = { version = "0.2.17", features = ["serde"] }
jiff-diesel = { version = "0.1.3", features = ["postgres"] }
pretty_assertions = { version = "1.4.1" }
proc-macro2 = { version = "1.0.104" }
quote = { version = "1.0.42" }
rand = { version = "0.10.0-rc.5" }
regex = "1.12.2"
reqwest = { version = "0.13.1", features = ["json"] }
rstest = { version = "0.26.1", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.148" }
serde_qs = { version = "1.0.0-rc.4", features = ["axum"] }
strum = { version = "0.27.2", features = ["derive"] }
syn = { version = "2.0.112", default-features = false, features = [
  "full",
  "parsing",
] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread"] }
tracing = { version = "0.1.44" }
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["json"] }
ts-rs = { version = "11.1.0", features = [
  "no-serde-warnings",
  "serde-json-impl",
  "uuid-impl",
] }
url = { version = "2.5.7", features = ["serde"] }
uuid = { version = "1.19.0", features = ["serde", "v7"] }
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }

[workspace.lints.clippy]
cast_precision_loss = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
pedantic = { level = "warn", priority = -1 }
wildcard_imports = "allow"
