[package]
edition.workspace = true
name = "cellnoor-typescript"
version = "0.1.0"

[dependencies]
cellnoor-api = { version = "0.1.0", path = "../../cellnoor-api", features = [
  "typescript",
] }
cellnoor-models = { version = "0.1.0", path = "../cellnoor-models", features = [
  "typescript",
] }
clap.workspace = true
heck.workspace = true
serde_json.workspace = true
ts-rs.workspace = true

[lints]
workspace = true
