[package]
edition.workspace = true
name = "ranged"
version = "0.1.0"

[dependencies]
deranged.workspace = true
diesel = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
ts-rs = { workspace = true, optional = true }


[lints]
workspace = true

[features]
diesel = ["dep:diesel"]
serde = ["dep:serde", "deranged/serde"]
typescript = ["dep:ts-rs"]
